@@ -1,3 +1,6 @@
+2011-12-25 (0.0.4)
+ * Support simplecov
+ * Add more tests
 2011-10-08 (0.0.3)
  * Add permutation and subset implementations
 2011-09-26 (0.0.2)
